--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "start": "node dist/index.js"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
@@ -16,8 +17,10 @@
   },
   "dependencies": {
     "@types/multer": "^1.4.7",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.7.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.5.4"
   }
 }
